--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,18 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/message_behind_status_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/sample_message"
+        android:textColor="?attr/colorOnSecondary"
+        android:textStyle="bold"
+        android:background="?attr/colorSecondary"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
         style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
