--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,16 +16,13 @@
         android:text="@string/sample_message"
         android:textColor="?attr/colorOnSecondary"
         android:textStyle="bold"
-        android:background="?attr/colorSecondary"
-        android:visibility="gone"
-        tools:visibility="visible"/>
+        android:background="?attr/colorPrimaryVariant"/>
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
         style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
+        android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/top_app_bar"
