--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,10 @@
 <resources>
-    <style name="Theme.DisplayCutoutsSample" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Base.Theme.DisplayCutoutsSample" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
+    <style name="Theme.DisplayCutoutsSample" parent="Base.Theme.DisplayCutoutsSample">
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
