--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,5 @@
 <resources>
-    <style name="Base.Theme.DisplayCutoutsSample" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
-    </style>
+    <style name="Base.Theme.DisplayCutoutsSample" parent="Theme.MaterialComponents.DayNight.NoActionBar"/>
 
     <style name="Theme.DisplayCutoutsSample" parent="Base.Theme.DisplayCutoutsSample">
         <item name="colorPrimary">@color/purple_500</item>
